# smart-cleaner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev-constraints.txt  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  cli_smoke.yml
docs/: ARCHITECTURE.md  GC.md  PLUGIN_API.md  PLUGIN_CONFIG.md  ROADMAP.md  SANDBOX.md  plugin_schema.json
scripts/: bwrap-seccomp.json  prototype_bwrap.sh  prototype_sandbox.sh  regenerate-constraints.sh  render_form_example.py  run_dev.sh  serve_form_example.py  validate-constraints.py  validate-plugin-schema.py
src/smartcleaner/: __init__.py  __main__.py  config.py
src/smartcleaner/cli/: commands.py
src/smartcleaner/db/: operations.py
src/smartcleaner/gui/: main_window.py
src/smartcleaner/managers/: cleaner_manager.py  plugin_registry.py  plugin_runner.py  safety_validator.py  undo_manager.py
src/smartcleaner/plugins/: __init__.py  apt_cache.py  base.py  browser_cache.py  discovery.py  kernels.py  systemd_journals.py  temp_files.py  test_isolated_plugin.py  thumbnails.py  tmp_cleaner.py
src/smartcleaner/utils/: json_schema.py  logging_config.py  privilege.py
tests/: conftest.py  test_cleanableitem.py  test_cleaner_manager.py  test_cleaner_manager_logging.py  test_cleaner_manager_no_log_on_failure.py  test_cleanermgr_injection.py  test_cli.py  test_cli_apt_cache.py  test_cli_clean_kernels.py  test_cli_clean_plugins.py  test_cli_config_kernels.py  test_cli_config_set.py  test_cli_integration.py  test_cli_plugin_config_set_get.py  test_cli_plugins_export_form.py  test_cli_plugins_list_json.py  test_cli_plugins_show.py  test_cli_plugins_show_json.py  test_config_validation_helpers.py  test_config_xdg.py  test_db_undo.py  test_kernels_clean_failure_integration.py  test_kernels_version_parsing.py  test_migrations.py  test_new_cleaner_manager.py  test_plugin_bubblewrap_integration.py  test_plugin_bwrap_seccomp_integration.py  test_plugin_config_metadata.py  test_plugin_isolation.py  test_plugin_json_schema.py  test_plugin_registry.py  test_plugin_sandbox_integration.py  test_plugins_apt.py  test_plugins_cache_tmp.py  test_plugins_discovery_wrapper.py  test_plugins_kernels.py  test_plugins_kernels_retention.py  test_restore_robustness.py  test_safety_validator.py  test_toml_parser_presence.py
