[project]
name = "smart-cleaner"
version = "0.1.1"
description = "Smart Cleaner - GUI skeleton (PyQt6)"
requires-python = ">=3.10"

[project.scripts]
smartcleaner = "smartcleaner.cli.commands:cli"
smartcleaner-cli = "smartcleaner.cli.commands:cli"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
